Version 0.1.2

- Add type annotations and formatting checking
- Added --extended-text option, to fetch the full tweet text
- Fixes a bug that made the option --exclude-quotes to not work