@@ -1,6 +1,5 @@
 import os
 
-import pytest
 import yaml
 from click.testing import CliRunner
 
