@@ -1,0 +1,1 @@
+{"created_at": "Mon Mar 18 10:05:40 +0000 2019", "id": 1107583843555573760, "id_str": "1107583843555573760", "text": "People: you're a Machine Learning Engineer? You must be so smart!\nMe: *Googles [any] model evaluation metric defini\u2026 https://t.co/aT7rkM4o6k", "truncated": true, "entities": {"hashtags": [], "symbols": [], "user_mentions": [], "urls": [{"url": "https://t.co/aT7rkM4o6k", "expanded_url": "https://twitter.com/i/web/status/1107583843555573760", "display_url": "twitter.com/i/web/status/1\u2026", "indices": [117, 140]}]}, "source": "<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>", "in_reply_to_status_id": null, "in_reply_to_status_id_str": null, "in_reply_to_user_id": null, "in_reply_to_user_id_str": null, "in_reply_to_screen_name": null, "user": {"id": 379637011, "id_str": "379637011", "name": "Guillermo Carrasco", "screen_name": "guillemch", "location": "Stockholm", "description": "ML Engineer working at iZettle AB. Interested in technology, nature and all kind of outdoors sports. Passion for music.", "url": "https://t.co/JjCyMtsvTW", "entities": {"url": {"urls": [{"url": "https://t.co/JjCyMtsvTW", "expanded_url": "http://mussol.org/", "display_url": "mussol.org", "indices": [0, 23]}]}, "description": {"urls": []}}, "protected": false, "followers_count": 177, "friends_count": 159, "listed_count": 21, "created_at": "Sun Sep 25 09:09:01 +0000 2011", "favourites_count": 528, "utc_offset": null, "time_zone": null, "geo_enabled": true, "verified": false, "statuses_count": 873, "lang": null, "contributors_enabled": false, "is_translator": false, "is_translation_enabled": false, "profile_background_color": "000000", "profile_background_image_url": "http://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_image_url_https": "https://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_tile": false, "profile_image_url": "http://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_image_url_https": "https://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_banner_url": "https://pbs.twimg.com/profile_banners/379637011/1432621786", "profile_link_color": "19CF86", "profile_sidebar_border_color": "000000", "profile_sidebar_fill_color": "000000", "profile_text_color": "000000", "profile_use_background_image": false, "has_extended_profile": true, "default_profile": false, "default_profile_image": false, "following": false, "follow_request_sent": false, "notifications": false, "translator_type": "none"}, "geo": null, "coordinates": null, "place": null, "contributors": null, "is_quote_status": true, "quoted_status_id": 1107086783307608064, "quoted_status_id_str": "1107086783307608064", "quoted_status": {"created_at": "Sun Mar 17 01:10:32 +0000 2019", "id": 1107086783307608064, "id_str": "1107086783307608064", "text": "People: you're a statistician? You must be so smart!\nMe: *Google's type II error for the 10th time this week*\n\n(Man\u2026 https://t.co/J8ZlEaugFF", "truncated": true, "entities": {"hashtags": [], "symbols": [], "user_mentions": [], "urls": [{"url": "https://t.co/J8ZlEaugFF", "expanded_url": "https://twitter.com/i/web/status/1107086783307608064", "display_url": "twitter.com/i/web/status/1\u2026", "indices": [117, 140]}]}, "source": "<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>", "in_reply_to_status_id": null, "in_reply_to_status_id_str": null, "in_reply_to_user_id": null, "in_reply_to_user_id_str": null, "in_reply_to_screen_name": null, "user": {"id": 382968137, "id_str": "382968137", "name": "Chelsea Parlett-Pelleriti", "screen_name": "ChelseaParlett", "location": "who knows?", "description": "Chelsea Parlett-Pelleriti, M.S.\nstats lover/writer\u270d\ud83c\udffc, PhD student \ud83d\udc69\ud83c\udffb\u200d\ud83c\udf93\n#statistics #scicomm #datascience #statstiktok\n\ud83d\udc69\ud83c\udffb\u200d\ud83d\udcbb she/her", "url": "https://t.co/aRw1coLMoq", "entities": {"url": {"urls": [{"url": "https://t.co/aRw1coLMoq", "expanded_url": "https://cmparlettpelleriti.github.io/", "display_url": "cmparlettpelleriti.github.io", "indices": [0, 23]}]}, "description": {"urls": []}}, "protected": false, "followers_count": 14768, "friends_count": 601, "listed_count": 160, "created_at": "Sat Oct 01 01:15:05 +0000 2011", "favourites_count": 37149, "utc_offset": null, "time_zone": null, "geo_enabled": false, "verified": false, "statuses_count": 14658, "lang": null, "contributors_enabled": false, "is_translator": false, "is_translation_enabled": false, "profile_background_color": "000000", "profile_background_image_url": "http://abs.twimg.com/images/themes/theme1/bg.png", "profile_background_image_url_https": "https://abs.twimg.com/images/themes/theme1/bg.png", "profile_background_tile": false, "profile_image_url": "http://pbs.twimg.com/profile_images/1123289792446255104/PAzGI9WX_normal.png", "profile_image_url_https": "https://pbs.twimg.com/profile_images/1123289792446255104/PAzGI9WX_normal.png", "profile_banner_url": "https://pbs.twimg.com/profile_banners/382968137/1498488941", "profile_link_color": "7FDBB6", "profile_sidebar_border_color": "000000", "profile_sidebar_fill_color": "000000", "profile_text_color": "000000", "profile_use_background_image": false, "has_extended_profile": false, "default_profile": false, "default_profile_image": false, "following": false, "follow_request_sent": false, "notifications": false, "translator_type": "none"}, "geo": null, "coordinates": null, "place": null, "contributors": null, "is_quote_status": true, "quoted_status_id": 1106849428609085440, "quoted_status_id_str": "1106849428609085440", "retweet_count": 105, "favorite_count": 1195, "favorited": true, "retweeted": false, "possibly_sensitive": false, "possibly_sensitive_appealable": false, "lang": "en"}, "retweet_count": 0, "favorite_count": 5, "favorited": false, "retweeted": false, "possibly_sensitive": false, "possibly_sensitive_appealable": false, "lang": "en"}
