@@ -1,0 +1,1 @@
+{"created_at": "Mon Dec 16 12:42:43 +0000 2019", "id": 1206555252599721984, "id_str": "1206555252599721984", "full_text": "@rasbt The second edition set the knowledge base that helped me get my current job as ML Engineer :) I can't wait to read the new additions in the third edition I just got. THANKS @rasbt  and @vmirly !", "truncated": false, "display_text_range": [7, 201], "entities": {"hashtags": [], "symbols": [], "user_mentions": [{"screen_name": "rasbt", "name": "Sebastian Raschka", "id": 865622395, "id_str": "865622395", "indices": [0, 6]}, {"screen_name": "rasbt", "name": "Sebastian Raschka", "id": 865622395, "id_str": "865622395", "indices": [180, 186]}, {"screen_name": "vmirly", "name": "Vahid Mirjalili", "id": 1411699722, "id_str": "1411699722", "indices": [192, 199]}], "urls": []}, "source": "<a href=\"https://mobile.twitter.com\" rel=\"nofollow\">Twitter Web App</a>", "in_reply_to_status_id": 1205930427090907138, "in_reply_to_status_id_str": "1205930427090907138", "in_reply_to_user_id": 865622395, "in_reply_to_user_id_str": "865622395", "in_reply_to_screen_name": "rasbt", "user": {"id": 379637011, "id_str": "379637011", "name": "Guillermo Carrasco", "screen_name": "guillemch", "location": "Stockholm", "description": "ML Engineer working at iZettle AB. Interested in technology, nature and all kind of outdoors sports. Passion for music.", "url": "https://t.co/JjCyMtsvTW", "entities": {"url": {"urls": [{"url": "https://t.co/JjCyMtsvTW", "expanded_url": "http://mussol.org/", "display_url": "mussol.org", "indices": [0, 23]}]}, "description": {"urls": []}}, "protected": false, "followers_count": 177, "friends_count": 159, "listed_count": 21, "created_at": "Sun Sep 25 09:09:01 +0000 2011", "favourites_count": 528, "utc_offset": null, "time_zone": null, "geo_enabled": true, "verified": false, "statuses_count": 873, "lang": null, "contributors_enabled": false, "is_translator": false, "is_translation_enabled": false, "profile_background_color": "000000", "profile_background_image_url": "http://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_image_url_https": "https://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_tile": false, "profile_image_url": "http://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_image_url_https": "https://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_banner_url": "https://pbs.twimg.com/profile_banners/379637011/1432621786", "profile_link_color": "19CF86", "profile_sidebar_border_color": "000000", "profile_sidebar_fill_color": "000000", "profile_text_color": "000000", "profile_use_background_image": false, "has_extended_profile": true, "default_profile": false, "default_profile_image": false, "following": false, "follow_request_sent": false, "notifications": false, "translator_type": "none"}, "geo": null, "coordinates": null, "place": null, "contributors": null, "is_quote_status": false, "retweet_count": 0, "favorite_count": 0, "favorited": false, "retweeted": false, "lang": "en"}
