@@ -1,0 +1,1 @@
+{"created_at": "Sat Feb 22 06:22:20 +0000 2020", "id": 1231101900055027712, "id_str": "1231101900055027712", "text": "RT @GoogleAI: Introducing the TensorFlow Constrained Optimization library, a new tool to configure and train #MachineLearning models based\u2026", "truncated": false, "entities": {"hashtags": [{"text": "MachineLearning", "indices": [109, 125]}], "symbols": [], "user_mentions": [{"screen_name": "GoogleAI", "name": "Google AI", "id": 33838201, "id_str": "33838201", "indices": [3, 12]}], "urls": []}, "source": "<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>", "in_reply_to_status_id": null, "in_reply_to_status_id_str": null, "in_reply_to_user_id": null, "in_reply_to_user_id_str": null, "in_reply_to_screen_name": null, "user": {"id": 379637011, "id_str": "379637011", "name": "Guillermo Carrasco", "screen_name": "guillemch", "location": "Stockholm", "description": "ML Engineer working at iZettle AB. Interested in technology, nature and all kind of outdoors sports. Passion for music.", "url": "https://t.co/JjCyMtsvTW", "entities": {"url": {"urls": [{"url": "https://t.co/JjCyMtsvTW", "expanded_url": "http://mussol.org/", "display_url": "mussol.org", "indices": [0, 23]}]}, "description": {"urls": []}}, "protected": false, "followers_count": 177, "friends_count": 159, "listed_count": 21, "created_at": "Sun Sep 25 09:09:01 +0000 2011", "favourites_count": 528, "utc_offset": null, "time_zone": null, "geo_enabled": true, "verified": false, "statuses_count": 873, "lang": null, "contributors_enabled": false, "is_translator": false, "is_translation_enabled": false, "profile_background_color": "000000", "profile_background_image_url": "http://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_image_url_https": "https://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_tile": false, "profile_image_url": "http://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_image_url_https": "https://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_banner_url": "https://pbs.twimg.com/profile_banners/379637011/1432621786", "profile_link_color": "19CF86", "profile_sidebar_border_color": "000000", "profile_sidebar_fill_color": "000000", "profile_text_color": "000000", "profile_use_background_image": false, "has_extended_profile": true, "default_profile": false, "default_profile_image": false, "following": false, "follow_request_sent": false, "notifications": false, "translator_type": "none"}, "geo": null, "coordinates": null, "place": null, "contributors": null, "retweeted_status": {"created_at": "Fri Feb 21 18:30:34 +0000 2020", "id": 1230922776849993729, "id_str": "1230922776849993729", "text": "Introducing the TensorFlow Constrained Optimization library, a new tool to configure and train #MachineLearning mod\u2026 https://t.co/VxEBHu2cPh", "truncated": true, "entities": {"hashtags": [{"text": "MachineLearning", "indices": [95, 111]}], "symbols": [], "user_mentions": [], "urls": [{"url": "https://t.co/VxEBHu2cPh", "expanded_url": "https://twitter.com/i/web/status/1230922776849993729", "display_url": "twitter.com/i/web/status/1\u2026", "indices": [117, 140]}]}, "source": "<a href=\"https://mobile.twitter.com\" rel=\"nofollow\">Twitter Web App</a>", "in_reply_to_status_id": null, "in_reply_to_status_id_str": null, "in_reply_to_user_id": null, "in_reply_to_user_id_str": null, "in_reply_to_screen_name": null, "user": {"id": 33838201, "id_str": "33838201", "name": "Google AI", "screen_name": "GoogleAI", "location": "Mountain View, CA", "description": "Google AI is focused on bringing the benefits of AI to everyone. In conducting and applying our research, we advance the state-of-the-art in many domains.", "url": "https://t.co/WrL9sUqFHx", "entities": {"url": {"urls": [{"url": "https://t.co/WrL9sUqFHx", "expanded_url": "https://research.google", "display_url": "research.google", "indices": [0, 23]}]}, "description": {"urls": []}}, "protected": false, "followers_count": 1524348, "friends_count": 21, "listed_count": 15042, "created_at": "Tue Apr 21 06:59:33 +0000 2009", "favourites_count": 6, "utc_offset": null, "time_zone": null, "geo_enabled": true, "verified": true, "statuses_count": 1578, "lang": null, "contributors_enabled": false, "is_translator": false, "is_translation_enabled": false, "profile_background_color": "C0DEED", "profile_background_image_url": "http://abs.twimg.com/images/themes/theme1/bg.png", "profile_background_image_url_https": "https://abs.twimg.com/images/themes/theme1/bg.png", "profile_background_tile": false, "profile_image_url": "http://pbs.twimg.com/profile_images/993649592422907904/yD7LkqU2_normal.jpg", "profile_image_url_https": "https://pbs.twimg.com/profile_images/993649592422907904/yD7LkqU2_normal.jpg", "profile_banner_url": "https://pbs.twimg.com/profile_banners/33838201/1525739769", "profile_link_color": "1DA1F2", "profile_sidebar_border_color": "C0DEED", "profile_sidebar_fill_color": "DDEEF6", "profile_text_color": "333333", "profile_use_background_image": true, "has_extended_profile": false, "default_profile": true, "default_profile_image": false, "following": true, "follow_request_sent": false, "notifications": false, "translator_type": "none"}, "geo": null, "coordinates": null, "place": null, "contributors": null, "is_quote_status": false, "retweet_count": 281, "favorite_count": 657, "favorited": true, "retweeted": true, "possibly_sensitive": false, "lang": "en"}, "is_quote_status": false, "retweet_count": 281, "favorite_count": 0, "favorited": true, "retweeted": true, "lang": "en"}
