@@ -1,0 +1,1 @@
+{"created_at": "Tue Jun 23 08:30:03 +0000 2020", "id": 1275345363118030848, "id_str": "1275345363118030848", "text": "I bought a set of Machine Learning cards from @chrisalbon a while ago. I created a small script to select one at ra\u2026 https://t.co/vS49wGJo5f", "truncated": true, "entities": {"hashtags": [], "symbols": [], "user_mentions": [{"screen_name": "chrisalbon", "name": "Chris Albon", "id": 11518572, "id_str": "11518572", "indices": [46, 57]}], "urls": [{"url": "https://t.co/vS49wGJo5f", "expanded_url": "https://twitter.com/i/web/status/1275345363118030848", "display_url": "twitter.com/i/web/status/1\u2026", "indices": [117, 140]}]}, "source": "<a href=\"https://mobile.twitter.com\" rel=\"nofollow\">Twitter Web App</a>", "in_reply_to_status_id": null, "in_reply_to_status_id_str": null, "in_reply_to_user_id": null, "in_reply_to_user_id_str": null, "in_reply_to_screen_name": null, "user": {"id": 379637011, "id_str": "379637011", "name": "Guillermo Carrasco", "screen_name": "guillemch", "location": "Stockholm", "description": "ML Engineer working at iZettle AB. Interested in technology, nature and all kind of outdoors sports. Passion for music.", "url": "https://t.co/JjCyMtsvTW", "entities": {"url": {"urls": [{"url": "https://t.co/JjCyMtsvTW", "expanded_url": "http://mussol.org/", "display_url": "mussol.org", "indices": [0, 23]}]}, "description": {"urls": []}}, "protected": false, "followers_count": 177, "friends_count": 159, "listed_count": 21, "created_at": "Sun Sep 25 09:09:01 +0000 2011", "favourites_count": 528, "utc_offset": null, "time_zone": null, "geo_enabled": true, "verified": false, "statuses_count": 873, "lang": null, "contributors_enabled": false, "is_translator": false, "is_translation_enabled": false, "profile_background_color": "000000", "profile_background_image_url": "http://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_image_url_https": "https://abs.twimg.com/images/themes/theme7/bg.gif", "profile_background_tile": false, "profile_image_url": "http://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_image_url_https": "https://pbs.twimg.com/profile_images/1097829243638202368/KFAqe1gv_normal.png", "profile_banner_url": "https://pbs.twimg.com/profile_banners/379637011/1432621786", "profile_link_color": "19CF86", "profile_sidebar_border_color": "000000", "profile_sidebar_fill_color": "000000", "profile_text_color": "000000", "profile_use_background_image": false, "has_extended_profile": true, "default_profile": false, "default_profile_image": false, "following": false, "follow_request_sent": false, "notifications": false, "translator_type": "none"}, "geo": null, "coordinates": null, "place": null, "contributors": null, "is_quote_status": false, "retweet_count": 0, "favorite_count": 1, "favorited": false, "retweeted": false, "possibly_sensitive": false, "possibly_sensitive_appealable": false, "lang": "en"}
